[project]
name = "ikonic-api"
version = "0.1.0"
description = "API server for planning and managing snowboard/ski trips, powered by FastAPI and Supabase."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.6",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.6",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pydantic-settings>=2.9.1",
    "pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.12.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.24",
    "starlette==0.41.3",
    "supabase>=2.15.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.32.1",
    "uvloop==0.21.0",
    "vonage>=4.4.0",
    "watchfiles==1.0.0",
    "websockets==14.1",
]

[dependency-groups]
dev = [
    "rich>=13.9.4",
    "ruff>=0.11.6",
]

[tool.ruff]
exclude = [
  "**/*.egg-info",
  "**/*.egg",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Modules
  "COM",    # flake8-commas
  "C90",    # mccabe complexity
  "DJ",     # django
  "EXE",    # flake8-executable
  "T10",    # debugger
  "TID",    # flake8-tidy-imports

  # Specific rules
  "D101",
  "D102",
  "D203",
  "D205", # 1 blank line between doc string and desc
  "D213",
  "D104",
  "E402",  # import not at top of file,
  "EM101", # inline string
  "EM102",
  "E501",  # line too long
  "TRY003", "TD002", "TD003", "FIX002"
]


[project.scripts]
lint = "core.cli:lint"
format = "core.cli:formatter"